client/public/style.css
.navbar-nav > li > a {
    padding-top:5px !important;
    padding-bottom:5px !important;
    overflow: visible; !important;
    z-index: 999;
}
.navbar {
    min-height:100px !important;
    overflow: visible; !important;


}

.pointer:hover{
    cursor: pointer;
}

.deletedCase{
    display: none;
}

.headlines{
    display: grid;
    grid-template-columns: 2fr;
    max-width: 30%;
    margin: auto;
    padding-top: 20px;
    padding-bottom: 20px;
    font-family: Helvetica, serif;
    font-weight: bold;
}

.profCard {
    width: 50%;
    border: none;
}

.dropdownmenus {
    position:fixed;
    left:310px;
}

.dropdownmenus1 {
    position:fixed;
    left:450px;
}

.dropdown{
    z-index:-1;
    border: 0px solid white;
    overflow: visible;
}

.open {
    color: #ffffff; !important;

    background-color: white;
}



.btn-primary {
    background-color: #337ab7;
    border-color: #2e6da4;
    color: #fff;
}

.dropdown-menu_left {
    border: 2px solid red;
}


.dropdown-toggle {
    padding-top:13px !important;
    padding-bottom:13px !important;
    background: none;
    color: #ffffff;
    font-size:16px;
    border:none;
}
.dropdown-toggle:hover {
    background: white;
    color: #004400;
}

.dropdown-toggle:active  {
    background: white; !important
    color: #ff0000; !important
}



.card {
    width:40%;
    border:none;
}
.right {
    position: absolute;
    right: 0px;
    padding: 5%;
}

.left {
    position: absolute;
    left: 0px;
    padding: 5%;
    width: 40%;
}

.main-background {
    background-color: #7ad8ff;
    width: 100%;
    height: 100%;
}

.card-background {
    background-color: #7ad8ff;
}

.logo {
    height: 100%;
    width: 25%;
}



.events-body li {
	  margin-bottom: 80px;
}

.events-body img {

}


.userHome-body{

}

.loginoption1, .loginoption2, .loginoption3 {
    border-radius: 25px;
    border: 1px solid black;
    background-color: #444444;
    width:350px;
    height: inherit;
    text-align:center;
    padding:14px;
    margin:10px;
    color:white;
}

.userHome-container{
    background-color:inherit; /* BYTTES UT MED HVIT */
    width: 100%;
    padding: 0 10%;
    margin:0 auto;
}

.userHome-banner{

    background-image: url("https://blogmedia.evbstatic.com/wp-content/uploads/wpmulti/sites/3/2018/03/03103805/big-concert-audience-listening-to-music-at-festival-picture-id485343244.jpg");
    height: 250px;
    background-color: #50BBE6;
    text-align: center;
    padding-top: 1px;

}

.userHome-event h5{
    color:#1c7f7f;
}

.userHome-event p{
    color: grey;
}


.cell1 p{
     text-align: center;
     border-bottom: 1px solid #000
 }


.cell1 p, h4{
     text-align: center;
     font-family: 'IBM Plex Sans', sans-serif;
    }

.userHome-button1{
     border-radius: 9px;
     margin:0 auto;
     width: 500px;
     height: 200px;
     background: rgba(204, 204, 204, 0.5);
    text-align: center;


}

.userHome-button1 h5{
    padding-top: 30px;


}

.userHome-button1 button{
  background-color: #f4511e;
  border: none;
  color: black;
  padding: 16px 32px;
  text-align: center;
  font-size: 50px;
  width: 400px;
  height: 100px;
  margin: 4px 2px;
  opacity: 0.7;
  transition: 0.3s;
  display: inline-block;
  text-decoration: none;
  cursor: pointer;


}

.loginoption1 img, .loginoption2 img, .loginoption3 img {
    height:300px;
}
/* Optional styling */
summary::-webkit-details-marker {
    color: blue;
}
summary:focus {
    outline-style: none;
}

.userHome-button1 button:hover{
 opacity: 1;

}

.events-container{


    margin:0 auto;
    padding-left: 500px;
}

.events-container img {
    width: 100px;
}

.calender{
    width: 100%;
    height: 100%;
    padding: 10%;
    text-align: center;
    border: 1px solid;
    border-radius: 5px;
    border-color: #e1e8e8;
    -webkit-box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.75);
    box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.75);
}



.userHome-events h4{
    font-family: 'IBM Plex Sans', sans-serif;
}

/*.row-style {*/
    /*width: 500px;*/
/*}*/

.form-group-style {
    margin-bottom: 2%;
}





/* Colors */
/*
dark blue: #476A6F
light blue: #258EA6
dark green: #519E8A
medium green: #7EB09B
light green: #A3C4BC
*/




ListItem {
    height: 200px;
}

.fullfør {
    margin-top: 3%;
}

.caseEdit-wrapper .caseEdit-wrapper.address-field {
    margin-bottom: 2%;
}

.map-wrapper {
    height: 300px !important;
}

.rapporter {
    height: 1000px;
    margin-right: 0px !important;
    margin-left: 0px !important;
}

.img-visible {
    display: inherit !important;
}

.current-location {
    margin-right: 0px !important;
}

.feilmelding {
    color: red;
}

.align-link {
    text-align: center;
}

.loading-img {
    text-align: center;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.blue-banner {
    width: 100%;
    height: 80px;
    text-align: center;
    background-color: #4bc2f1;
}

.banner-text {
    vertical-align: middle;
}

.abcd {
    color: red;
}

.delete-case {
    float: right !important;
}

.case-status {
    float: none !important;
    margin-left: 20px;
}

.clickable-link {
    cursor: pointer !important;
}

.caselist-container {
    width: 50%;
    float: right;
}

.profilecard-container {
    width: 40%;
    float: left;
}

.PrivateUsersList-title{

}

.comment-card {
    font-weight: bold;
}

.edit-button {
    padding: 5px 7px 5px !important;
}



.hover {
    pointer: hover;
}

.search-employee {
    color: black !important;
}

.btn-outline-dark {
    color: black !important;
}

.react-modal {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background-color: #666666;
    opacity: 0.7;
    z-index: 10000;
}

.modal-visible {
    display: block;
}

.modal-hidden {
    display: none;
}

.react-modal .loader-msg{
    display: block;
    position: absolute;
    left: 50%;
    top: 50%;
    color: #fff;
}

.react-modal {
    height: 2000px !important;
}


.report-loader {
    text-align: center !important;
    margin-top: 300px !important;

}

